objects/Committee__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Standing_Agenda_Order__c</fullName>
        <label>Max Standing Agenda Order</label>
        <summarizedField>Standing_Agenda__c.Order__c</summarizedField>
        <summaryForeignKey>Standing_Agenda__c.Committee__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <label>Committee</label>
    <nameField>
        <label>Committee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Committee</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Committee_Follower__c</fullName>
        <label>Committee Follower</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Committee_Member__c</fullName>
        <label>Committee Member</label>
    </sharingReasons>
</CustomObject>